<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="600dp" >

    <ImageButton
        android:id="@+id/infobutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/infobutton3"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/infobutton3"
        android:layout_marginTop="51dp"
        android:onClick="loadView1"
        android:src="@drawable/what_is_hearing_loss"
        android:background="#FFFFFF"
        android:text="@string/infobutton1" />

    <ImageButton
        android:id="@+id/infobutton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/infobutton1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/symptoms"
        android:background="#FFFFFF"
        android:onClick="loadView2"
        android:text="@string/infobutton2" />

    <ImageButton
        android:id="@+id/infobutton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/infobutton2"
        android:layout_below="@+id/infobutton2"
        android:layout_marginTop="70dp"
        android:onClick="loadView3"
        android:src="@drawable/what_is_test"
        android:background="#FFFFFF"
        android:text="@string/infobutton3" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/infobutton1"
        android:layout_centerHorizontal="true"
        android:text="What is hearing loss?" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/infobutton2"
        android:layout_centerHorizontal="true"
        android:text="Symptoms of hearing loss" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/infobutton3"
        android:layout_centerHorizontal="true"
        android:text="What is the test?" />

    <ImageButton
        android:id="@+id/infobutton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:background="#FFFFFF"
        android:onClick="loadView4"
        android:src="@drawable/developer"
        android:text="@string/infobutton4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/infobutton4"
        android:layout_centerHorizontal="true"
        android:text="About developer" />
    
    </RelativeLayout>
    
    </ScrollView>
 
    
